fix: ResponsiveMenu visibility on different viewports

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -66,7 +66,12 @@
   }
 }
 
-.navbar__responsive-menu-toggle {
+/*
+The responsive menu and its toggle button 
+are only visible on small and medium viewport
+*/
+.navbar__responsive-menu-toggle,
+.responsive-menu {
   display: none;
 
   @media screen and (max-width: variables.$nz-md) {
